@@ -2,6 +2,15 @@
 
 	* src/SDCCpeeph.c:
 	  Peephole function for z88dk, patch from zsdcc fork diff by Phillip Stevens.
+	* src/SDCC.lex,
+	  src/SDCC.y,
+	  src/SDCCerr.c,
+	  src/SDCCerr.h,
+	  src/SDCCsymt.c,
+	  src/SDCCsymt.h,
+	  src/z80/gen.c,
+	  src/z80/main.c:
+	  More z88dk-specific calling conventions, patch from zsdcc fork diff by Phillip Stevens.
 
 2018-12-01 Philipp Klaus Krause <pkk AT spth.de>
 
